@@ -1,3 +1,1 @@
 # enum-Dictionary
-To run this project, in your VM options you must add: "--module-path " + the path to your JavaFx sdk library, + "--add-modules javafx.controls,javafx.fxml
-For me, this looks like "--module-path /Library/Java/JavaVirtualMachines/javafx-sdk-15/lib --add-modules javafx.controls,javafx.fxml
